--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     </div>
     <hr>
     <div id="reportContainer" >
-        <iframe allowfullscreen="true" src="https://testomsosogrd1.privatelink.azurewebsites.net" frameborder="0" hspace="0" vspace="0" marginheight="0" marginwidth="0" scrolling="no"></iframe>
+        <iframe allowfullscreen="true" src="https://testomsosogrd39.azurewebsites.net" frameborder="0" hspace="0" vspace="0" marginheight="0" marginwidth="0" scrolling="no"></iframe>
     </div>
 </body>
 </html>
